# flightRouteImport

./: CMakeLists.txt  DataFileAbstract.cpp  FPL.cpp  FPL.h  PLN.cpp  PLN.h  README.md  Waypoint.h  main.cpp  sample1.fpl  sample1.pln
sampleData/: EDDB-OMDB.pln  EGAA-EGKK.pln  EGPF-EGSS.pln  HSPN-OEJN.pln  KORDCYYZ.fms  LFPO-FMEE.pln  LGIR-HEGN.pln  SBKP-SBPP.pln  sample2.fpl
